# searchjobs

./: .env.example  .gitignore  README.md  bridge.py  manual_check.py  pyproject.toml  read_log.py  requirements.txt  test_search.py  verify_agents.py
apply_agent/: __main__.py  agent.py  apply_tools.py
data/resumes/: my_resume.txt
gui/: package-lock.json  package.json
gui/src/: App.jsx  index.css
search_agent/: __main__.py  agent.py  search_tools.py
